[gd_scene load_steps=17 format=2]

[ext_resource path="res://objects/particles/Explosion0.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/monitor/monitor.png" type="Texture" id=2]
[ext_resource path="res://scripts/nodes/solid_object.gd" type="Script" id=3]
[ext_resource path="res://objects/audios/OneUpAudio.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/monitor/icon.gd" type="Script" id=5]
[ext_resource path="res://objects/audios/ExplosionAudio.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/nodes/score_controller.gd" type="Script" id=7]
[ext_resource path="res://sprites/monitor/icons.png" type="Texture" id=9]
[ext_resource path="res://scripts/monitor/monitor.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "destroyed"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "destroyed"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "idle"

[sub_resource type="AnimationNodeTransition" id=5]
input_count = 2
input_0/name = "idle"
input_0/auto_advance = false
input_1/name = "destroyed"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=6]
graph_offset = Vector2( -298, 55 )
nodes/Animation/node = SubResource( 4 )
nodes/Animation/position = Vector2( -80, 80 )
"nodes/Animation 2/node" = SubResource( 3 )
"nodes/Animation 2/position" = Vector2( -80, 240 )
nodes/output/position = Vector2( 340, 120 )
nodes/state/node = SubResource( 5 )
nodes/state/position = Vector2( 140, 120 )
node_connections = [ "state", 0, "Animation", "state", 1, "Animation 2", "output", 0, "state" ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 14, 16 )

[node name="LifeMonitor" type="Node2D"]
script = ExtResource( 10 )
ground_layer = 3

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 9 )
hframes = 5
vframes = 3
frame = 10
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/destroyed = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/state/current = 0

[node name="Explosion0" parent="." instance=ExtResource( 1 )]
visible = false

[node name="SolidObject" type="StaticBody2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolidObject"]
shape = SubResource( 7 )

[node name="ScoreController" type="Node" parent="."]
script = ExtResource( 7 )
lifes = 1

[node name="Audios" type="Node" parent="."]

[node name="ItemAudio" parent="Audios" instance=ExtResource( 4 )]

[node name="ExplosionAudio" parent="Audios" instance=ExtResource( 6 )]

[connection signal="player_ceiling_collision" from="SolidObject" to="." method="_on_SolidObject_player_ceiling_collision"]
[connection signal="player_ground_collision" from="SolidObject" to="." method="_on_SolidObject_player_ground_collision"]
[connection signal="player_left_wall_collision" from="SolidObject" to="." method="_on_SolidObject_player_left_wall_collision"]
[connection signal="player_right_wall_collision" from="SolidObject" to="." method="_on_SolidObject_player_right_wall_collision"]
